--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -23,7 +23,7 @@ header > nav {
   width: 100%;
   height: 80px;
   /* margin: -1px; */
-  /* position: fixed; */
+  position: fixed;
   /* height: 8%; */
   background: rgba(13, 13, 13, 0.5);
 
