--- a/assets/css/aboutSectionStyle.css
+++ b/assets/css/aboutSectionStyle.css
@@ -146,6 +146,26 @@
   }
   
 }
+@media all and (max-width: 1024px) {
+  #about > h1{
+    font-size: 60px;
+  }
+  #aboutImg{
+    left: 25px;
+    height: 480px;
+    top: 168px;
+  }
+  #about > p {
+    right: 13px;
+    width: 645px;
+    font-size: 23px;
+
+  }
+  #about > h5 {
+    left: 36.1%;
+  }
+
+}
 
 @media all and (max-width: 992px) {
   #about {
