--- a/assets/css/heroPageStyle.css
+++ b/assets/css/heroPageStyle.css
@@ -182,6 +182,15 @@ span{
   }
   
 }
+@media all and (max-width: 1024px) {
+  .text-box h1 {
+    font-size: 45px;
+  }
+  .text-box {
+    font-size: 15px;
+  }
+  
+}
 
 @media all and (max-width: 992px) {
   main > section:nth-child(1) {
