--- a/assets/css/skillSectionStyle.css
+++ b/assets/css/skillSectionStyle.css
@@ -37,6 +37,7 @@
   display: flex;
   /* flex-direction: column; */
   justify-content: center;
+  /* left: 20%; */
 }
 
 #skills > section > div {
@@ -52,29 +53,29 @@
   left: 0;
 }
 #divTwo {
-  left: 25%;
+  left: 28%;
 }
 #divThree {
   left: 0;
   bottom: 0;
 }
 #divfour {
-  left: 25%;
+  left: 28%;
   bottom: 0;
 }
 #divfive {
-  left: 50%;
+  left: 55%;
 }
 #divSix {
-  left: 75%;
+  right: 0;
   
 }
 #divSeven {
-  left: 50%;
+  left: 55%;
   bottom: 0;
 }
 #divEight {
-  left: 75%;
+  right: 0;
   bottom: 0;
 }
 
